Hopefully a fix for [#31097] glibc error when playing sound using BGE